# sense-web

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-tests.yaml
sense_web/: exceptions.py  main.py
sense_web/api/: __init__.py  server.py
sense_web/api/routes/: devices.py  root.py  webui.py
sense_web/api/webui/static/: styles.css
sense_web/api/webui/templates/: base.html  command_form_fields.html  device.html  index.html
sense_web/coap/: server.py
sense_web/db/: __init__.py  base.py  models.py  session.py
sense_web/dto/: datapoint.py  device.py
sense_web/services/: command.py  datapoint.py  device.py  ipc.py  queue.py
tests/api/: test_routes.py
tests/coap/: test_resources.py
tests/db/: test_models.py  test_session.py
tests/services/: test_datapoint.py  test_device.py  test_ipc.py  test_queue.py  test_redis_queue.py
