[project]
name = "sense-web"
version = "0.1.0"
description = "CoAP-HTTP Gateway for the SENSE IoT Platform"
authors = [{ name = "Sam Kwort", email = "skwort@skwort.dev" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "aiocoap",
    "cbor2",
    "sqlalchemy",
    "aiosqlite",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "anyio",
    "httpx",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["sense_web"]

[tool.hatch.envs.default]
dependencies = [
    "sense-web[dev]"
]
[tool.hatch.envs.default.scripts]
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy sense_web"
test = "pytest tests"

[tool.ruff]
line-length = 79 

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
strict = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
